<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- APP basics -->
    <string name="app_name">ArvApp</string>
    <string name="ble_name">Bluetooth Device List</string>

    <!-- BLE -->
    <string name="text_pair">Pair</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude</string>
    <string name="height">Altitude</string>
    <string name="longitude">Longitude</string>

    <!-- Google inc -->
    <string name="google_app_id">7013903331</string>
    <string name="arrow_CD">Directional Arrow</string>
    <string name="emisio_hint">Transmitter Mode</string>
    <string name="recepcio_hint">Reception Mode</string>
    <string name="ble_butt_hint">Scan Devices</string>
    <string name="change_mode_hint">Change Mode</string>
    <string name="ble_info_hint">Please, tap Scan Devices button and select your DVA to receive information</string>


</resources>
