<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/rx_mode_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recepcio_hint"
        android:textSize="25sp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/rx_arrow"
        android:src="@drawable/arrow"
        android:paddingTop="20dp"
        android:contentDescription="@string/arrow_CD"
        android:layout_below="@+id/rx_mode_hint"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance"
        android:id="@+id/rx_distance_textview"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/rx_arrow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_mode_hint"
        android:id="@+id/rx_chmode_butt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/chmode_custom_buton"
        android:textColor="#ffffff"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/rx_distance_textview"
        android:layout_marginTop="40dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rescuedVictim"
        android:src="@drawable/ic_done"
        android:background="@drawable/rescuedbutton"
        android:layout_above="@+id/rx_arrow"
        android:layout_alignEnd="@+id/rx_arrow" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextVictim"
        android:src="@android:drawable/ic_media_ff"
        android:background="@drawable/passbutton"
        android:layout_alignTop="@+id/rx_distance_textview"
        android:layout_alignEnd="@+id/rx_arrow" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousVictim"
        android:src="@android:drawable/ic_media_rew"
        android:background="@drawable/passbutton"
        android:layout_alignTop="@+id/rx_distance_textview"
        android:layout_alignParentStart="true" />

</RelativeLayout>